--- a/style.css
+++ b/style.css
@@ -514,7 +514,7 @@
 
   body{
     max-width: 390px;
-    overflow: hidden;
+    overflow-x: hidden;
   }
   .header {
     width: 100%;
@@ -615,16 +615,19 @@
   font-size: 16px;
 }
 
+.form{
+  max-width: 350px;
+}
 .form-input  {
   height: 38px;
-  width: 326px;
+  width: 300px;
   border-radius: 24px solid rgba(255, 224, 196, 1);
   padding: 17px 16px;
 }
 
 .captcha-container{
   height: 38px;
-  width: 326px;
+  width: 300px;
   border-radius: 24px solid rgba(255, 224, 196, 1);
   
 }
@@ -637,11 +640,12 @@
 }
 
 .rct-types{
+  max-width: 390px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+  overflow-y: scroll;
   width: 358px;
   height: 703px;
   /* position: relative; */
@@ -678,6 +682,7 @@
 }
 
 .rct-cards {
+  
   display: flex;
   /* overflow-x: auto; */
   gap: 22px;
@@ -699,6 +704,11 @@
  height: 285px;
  width: 285px;
  object-fit: cover;
+}
+
+.real-smiles{
+ /* overflow-y: hidden; */
+  max-width: 390px;
 }
 
 .smile-text{
@@ -729,6 +739,13 @@
   /* justify-content: center; */
 }
 
+.smile-cards{
+  max-width: 390px;
+  overflow-y: hidden;
+}
+
+
+
 .safety-content{
 
   display: flex;
@@ -749,6 +766,11 @@
         margin-left: 17px;
     }
 
+    .smile-card{
+      position: relative;
+    left: 420px;
+    }
+
 .safety-content p{
    /* margin-top: 40px;
    margin-bottom: 40px; */
@@ -759,8 +781,11 @@
 }
 
 .safety-section{
-  margin-top: 135px;
-  
+  overflow: hidden;
+ height: 600px;
+  margin-top: 35px;
+   overflow-x: scroll;
+  max-width: 390px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -772,12 +797,15 @@
     width: 1320px;
     display: flex;
 
+    overflow-x: scroll;
     justify-content: center;
     gap: 10px;
   }
 
 .safety-card{
- left: 290px;
+  max-width: 390px;
+
+          left: 290px;
   width: 300px;
   height: 353.3px;
   border-radius: 20px;
@@ -809,9 +837,11 @@
 }
 
 .footer-section{
+      overflow: hidden;
+  max-width: 390px;
   position: relative;
-  top: 72px;
-  left: 0;
+  /* top: 72px;
+  left: 0; */
   justify-content: space-between;
 }
 
